updates. check notes when I am back

--- a/WMcomm-business.html
+++ b/WMcomm-business.html
@@ -5,12 +5,15 @@
     <title>Window Masters Nanaimo</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="WMstyle.css" type="text/css">
-    <!--link rel="icon" href="image/favicon.ico" type="image/x-icon"-->
+    <link rel="icon" href="images/faviconWM.png" type="image/x-icon">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Condensed:wght@700&display=swap');
+    </style>
 
 </head>
 <body>
     <header class="titles">
-        <!--<a href="WMhome.html"><img src="image/digital-logo.png" alt="Window Masters Nanaimo" width="100"></a>-->
+        <a href="WMhome.html"><img src="images/Windowmasterslogo.png" alt="Window Masters Nanaimo" width="100"></a>
         <h1>Commercial Business</h1>
         <div>Contact info</div>
     </header>
@@ -26,7 +29,12 @@
         </div>
     </nav>
     <main>
-        <aside>
+      <div class="wrap">
+        <div class="beforeafter">
+          <h2>BEFORE   /</h2>
+          <h2>/   AFTER</h2>
+          </div>
+        <aside class="inquiry">
             <h2>Inquiries</h2>
             <form method="post"><!--Add an action for this form, aka a place for it to send and confirmation-->
                 <label for="fname">First name</label>
@@ -53,14 +61,13 @@
                   <input type="radio" name="deck" id="deck" value="deck">Deck cleaning
                   <input type="radio" name="gutters" id="gutters" value="gutters">Gutters<br>
                   <input type="radio" name="other" id="other" value="other">Other<br>
-                <label for="comments">Comments</label>
-                  <input type="text" id="comments" name="comments">
+                  Comments:<br>
+                  <textarea name="comments" id="comments"></textarea><br><br>
+                  <input type="submit" name="submit">
             </form>
         </aside>
-        <div>
-          <!--Code scrolling images of before/after photos-->
         </div>
-        <div>
+        <div class="commercialproposal">
           <h2>Our Proposal to You</h2>
           <p>Here at Window Masters Nanaimo we offer contracts for commercial jobs. 
             We are dedicated and committed to any short or long term contracts and 
@@ -68,7 +75,8 @@
             your business's aesthetic and exterior health needs.
           </p>
         </div>
-        <article>
+        <div class="commercialservices">
+        <article class="comservicetopleft">
           <h3>Exterior Cleaning</h3>
           <p>Exterior cleaning is important for the longevity of your property. 
             As such your property deserves the best cleaning process available. 
@@ -85,7 +93,7 @@
             process you shouldn't need your house cleaned for atleast x years!
           </p>
         </article>
-        <article>
+        <article class="comservicetopmid">
           <h3>Interior/Exterior Windows</h3>
           <p>We started our business on windows. This is something we do better then 
             anyone else. The process we use for your windows is:
@@ -106,7 +114,7 @@
             cleaner then they have ever seen.
           </p>
         </article>
-        <article>
+        <article class="comservicetopright">
           <h3>Deck Cleaning</h3>
           <p>When it comes to cleaning your deck we will make sure it shines. 
             We will clean every part of your deck such as:
@@ -123,7 +131,9 @@
             do is pristine and as clean as it can get.
           </p>
         </article>
-        <article>
+        </div>
+        <div class="commercialservices">
+        <article class="comservicebottomleft">
           <h3>De-mossing</h3>
           <p>We starting de-mossing X years ago. Since then we have been improving 
             how we do things and have a fantastic process so we can offer the best 
@@ -137,7 +147,7 @@
             that trustworthy someone.
           </p>
         </article>
-        <article>
+        <article class="comservicebottommid">
           <h3>Gutters</h3>
           <p>When it comes to gutters we will make sure that they are pristine. 
             We have lots of experience with gutters and have a process that 
@@ -158,7 +168,7 @@
             place to dispose of it.
           </p>
         </article>
-        <article>
+        <article class="comservicebottomright">
           <h3>Concrete</h3>
           <p>Concrete is something that if not done properly can cause many 
             issues down the road. We will make sure it is proffesionally cleaned 
@@ -183,6 +193,7 @@
             was not taken care of beforehand.
           </p>
         </article>
+        </div>
     </main>
     <footer>
     </footer>
