--- a/WMhome.html
+++ b/WMhome.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="WMstyle.css" type="text/css">
     <link rel="icon" href="images/faviconWM.png" type="image/x-icon">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Condensed:wght@700&display=swap');
     </style>
 
 </head>
@@ -18,7 +18,7 @@
         <div>Contact info</div>
     </header>
     <nav class="wrap">
-        <div><!--add class for css styling-->
+        <div>
             <ul>
                 <li><a href="WMhome.html">Home</a></li>
                 <li><a href="WMresidential.html">Residential</a></li>
@@ -31,7 +31,7 @@
     <main>
         <div class="wrap">
         <div class="aboutus">
-            <h2>About Us</h2> <!--Add an image to the right side of this of the team.-->
+            <h2>About Us</h2> <!--image should be of the window masters team.-->
             <p>Window Masters Nanaimo is a small local business based out of Nanaimo, BC.
                 Our goal is to provide excellent services and to help you help your property. 
                 We started back in XXXX and have many return customers. We pride ourselves on our diligence, 
@@ -66,7 +66,8 @@
                   <input type="radio" name="gutters" id="gutters" value="gutters">Gutters<br>
                   <input type="radio" name="other" id="other" value="other">Other<br>
                 Comments:<br>
-                  <textarea name="comments" id="comments"></textarea>
+                  <textarea name="comments" id="comments"></textarea><br><br>
+                  <input type="submit" name="submit">
             </form>
         </aside>
         </div>
@@ -103,7 +104,7 @@
                 we can offer, what our expertise is, and why we are the best for the job. We guarentee that you will 
                 get what you pay for and look forward to proving why we are the best. Please feel free to ask any questions 
                 or get any concernes answered my using the "Inquiry" form.
-            </p><!--add link to position of form in bottom right, also more info on the left with link to commercial page-->
+            </p>
         </div>
         <div class="sectionright">
             <h2>Strata Services</h2>
@@ -120,7 +121,7 @@
                 We will meet you at the strata and do a walk around to discuss what we can offer and when we can offer it. 
                 We are confident that you will be completely satisfied with our services and that you will get the full experience.
                  If you have any further questions feel free to sent them threw the "Inquiry" form.
-            </p><!--add link to position of form to bottom right and link to Strata page in bottom left-->
+            </p>
         </div>
         </div>
           <h2>Why Choose Us</h2>
