--- a/WMresidential.html
+++ b/WMresidential.html
@@ -63,7 +63,8 @@
                   <input type="radio" name="gutters" id="gutters" value="gutters">Gutters<br>
                   <input type="radio" name="other" id="other" value="other">Other<br>
                 Comments:<br>
-                <textarea name="comments" id="comments"></textarea>
+                <textarea name="comments" id="comments"></textarea><br><br>
+                <input type="submit" name="submit">
             </form>
         </aside>
         </div>
