--- a/WMstrata.html
+++ b/WMstrata.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="WMstyle.css" type="text/css">
     <link rel="icon" href="images/faviconWM.png" type="image/x-icon">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Condensed:wght@700&display=swap');
+    </style>
 
 </head>
 <body>
@@ -59,7 +62,8 @@
                   <input type="radio" name="gutters" id="gutters" value="gutters">Gutters<br>
                   <input type="radio" name="other" id="other" value="other">Other<br>
                 Comments:<br>
-                <textarea name="comments" id="comments"></textarea>
+                <textarea name="comments" id="comments"></textarea><br><br>
+                <input type="submit" name="submit">
             </form>
         </aside>
         </div>
