Everything is as good as ill get it

--- a/WMhome.html
+++ b/WMhome.html
@@ -6,9 +6,6 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="WMstyle.css" type="text/css">
     <link rel="icon" href="images/faviconWM.png" type="image/x-icon">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Condensed:wght@700&display=swap');
-    </style>
 
 </head>
 <body>
@@ -41,7 +38,7 @@
         <aside class="inquiry">
             <h2>Inquiries</h2>
             <form method="post"><!--Add an action for this form, aka a place for it to send and confirmation-->
-                <label for="fname">First name</label><!--add submit and reset buttons to all pages-->
+                <label for="fname">First name</label><!--form for submitting inquiries. Should be hooked up to an email or something-->
                   <input type="text" id="fname" name="firstname" placeholder="Ex: John" required><br>
                 <label for="lname">Last name</label>
                   <input for="lname" id="lname" name="lastname" placeholder="Ex: Doe" required><br>
@@ -73,9 +70,9 @@
         </div>
         <div class="services">
         <div class="sectionleft">
-            <h2>Residential Services</h2>
+            <h2>Residential Services</h2><!--Highlights the objective when cleaning residential properties-->
             <p>We offer services such as:</p><br>
-            <ul><!--Add icons to each list item representing the type of service-->
+            <ul>
                 <li>Exterior cleaning</li>
                 <li>Windows</li>
                 <li>Concrete</li>
@@ -83,14 +80,17 @@
                 <li>Deck cleaning</li>
                 <li>Gutters</li>
             </ul><br>
-            <p>We will come personally and give you a quote on your home. <!--add more text?-->
+            <p>We will come personally and give you a quote on your home.
                 Our quote will involve us walking around your home with you to give you an idea of what we will do.
                 Also feel free to bring any concernes or questions up with us at any time. You can also ask 
                 ahead of time with our "Inquiry" form.
-            </p><!--add link to position of Contact form with a button in the bottom right, also link to more info on left to residential page-->
+            </p>
+            <form action="WMresidential.html">
+                <input type="submit" value="More info">
+            </form>
         </div>
         <div class="sectionmid">
-            <h2>Commercial Services</h2>
+            <h2>Commercial Services</h2><!--Highlights the objective when cleaning commercial property-->
             <p>We offer services such as:</p><br>
             <ul>
                 <li>Exterior cleaning</li>
@@ -105,9 +105,12 @@
                 get what you pay for and look forward to proving why we are the best. Please feel free to ask any questions 
                 or get any concernes answered my using the "Inquiry" form.
             </p>
+            <form action="WMcomm-business.html">
+                <input type="submit" value="More info">
+            </form>
         </div>
         <div class="sectionright">
-            <h2>Strata Services</h2>
+            <h2>Strata Services</h2> <!--Hightlights objectives when cleaning strata's-->
             <p>We offer services such as:</p><br>
             <ul>
                 <li>Exterior cleaning</li>
@@ -122,12 +125,15 @@
                 We are confident that you will be completely satisfied with our services and that you will get the full experience.
                  If you have any further questions feel free to sent them threw the "Inquiry" form.
             </p>
+            <form action="WMstrata.html">
+                <input type="submit" value="More info">
+            </form>
         </div>
         </div>
           <h2>Why Choose Us</h2>
         <div class="whychooseus">
         <article class="knowhow">
-            <h3>We know our stuff</h3>
+            <h3>We know our stuff</h3><!--Information regarding experience-->
             <p>We have been in the exterior cleaning business for X years. We have taken tons of advise from 
                 peers and have offer the safest and most lasting solution we can. Year after year we are always 
                 improving upon our tactics and adjusting how we do things to make sure we are leaving you with 
@@ -135,7 +141,7 @@
             </p>
         </article>
         <article class="harm">
-            <h3>Don't Harm Your Property</h3>
+            <h3>Don't Harm Your Property</h3><!--Information on products used and why cleaning is important-->
             <p>One of the things we pride ourselves on the most is our process and part of this process is the 
                 products we use. We use a biodegradable pre-wash that is completely safe and will not damage your 
                 siding, grass, soil, pets, or anything else you may have outside. We also use extender poles with a 
@@ -144,14 +150,14 @@
             </p>
         </article>
         <article class="friendly">
-            <h3>Friendly & Dedicated</h3>
+            <h3>Friendly & Dedicated</h3><!--Highlight the social ability of the crew-->
             <p>We pride ourselves on offering a full, great experience. This starts with introduction 
                 we are super friendly and easy to get along with. We also are extremely dedicated to our 
                 work so if you ever have concernes or questions we will happily answer them.
             </p>
         </article>
         <article class="localbusiness">
-            <h3>Local Business</h3>
+            <h3>Local Business</h3><!--Utilize the fact it is a small local business-->
             <p>Ontop of everything else we have to offer we are a local business. By employing us you are 
                 employing people from your community. Based out of Nanaimo we have so far done 1000's of exterior 
                 cleaning jobs. If you like to support local, we are a local business that will work for your 
@@ -160,7 +166,7 @@
         </article>
         </div>
     </main>
-    <footer><!--add logo, all links to other pages including socials-->
+    <footer>
     </footer>
 </body>
 </html>
