--- a/WMhome.html
+++ b/WMhome.html
@@ -167,6 +167,19 @@
         </div>
     </main>
     <footer>
+        <nav class="wrap">
+            <a href="WMhome.html"><img src="images/Windowmasterslogo.png" alt="Window Masters Nanaimo" width="100"></a>
+            <div>
+                <ul>
+                    <li><a href="WMhome.html">Home</a></li>
+                    <li><a href="WMresidential.html">Residential</a></li>
+                    <li><a href="WMstrata.html">Strata</a></li>
+                    <li><a href="WMcomm-business.html">Commercial Business</a></li>
+                    <li><a href="WMgallery.html">Gallery</a></li>
+                </ul>
+            </div>
+            <p>This is a fictional website that was designed and coded as an educational exercise. It is not intended to be seen outside of the class environment. None of the content and images were approved by the business owner.</p>
+        </nav>
     </footer>
 </body>
 </html>
